@@ -5,6 +5,14 @@ VEGAN STABLE VERSIONS
 
 Version 1.15-3 (opened 28 May, 2009)
 
+	* merged r818, 820: tsallis got argument hill.
+
+	* merged r796, 801: ordisurf can do linear or quadratic surfaces
+	with knots 2, 1 or 0.
+
+	* merged r775, r789: meandist with support function (sister
+	function to mrpp).
+
 	* merged r834, r837:r842 and r846 that put the observed test
 	statistic among permutations like should be done with order
 	statistics.  Concerns functions anosim, mantel, mantel.partial,
